--- a/libretro/Makefile.libretro
+++ b/libretro/Makefile.libretro
@@ -81,7 +81,6 @@ ifeq ($(platform), osx)
 		CXXFLAGS += $(ARCHFLAGS)
 		LDFLAGS += $(ARCHFLAGS)
 	endif
-	LDFLAGS += -lSDL -lSDL_net
 	COMMONFLAGS += -D__MACOSX__
 else ifneq (,$(findstring ios,$(platform)))
 	TARGET := $(TARGET_NAME)_libretro_ios.dylib
@@ -114,7 +113,8 @@ else ifeq ($(platform), psp1)
 	CXX = psp-g++$(EXE_EXT)
 	AR = psp-ar$(EXE_EXT)
 	WITH_DYNAREC = mips
-	COMMONFLAGS += -DPSP -G0
+	WITH_FAKE_SDL = 1
+	COMMONFLAGS += -DPSP -G0 -DWITH_FAKE_SDL
 	STATIC_LINKING = 1
 else ifeq ($(platform), vita)
 	TARGET := $(TARGET_NAME)_libretro_$(platform).a
@@ -122,7 +122,8 @@ else ifeq ($(platform), vita)
 	CXX = arm-vita-eabi-g++$(EXE_EXT)
 	AR = arm-vita-eabi-ar$(EXE_EXT)
 	WITH_DYNAREC = arm
-	COMMONFLAGS += -DVITA
+	WITH_FAKE_SDL = 1
+	COMMONFLAGS += -DVITA -DWORDS_BIGENDIAN
 	COMMONFLAGS += -mthumb -mcpu=cortex-a9 -mfloat-abi=hard -ftree-vectorize -ffast-math -fsingle-precision-constant -funroll-loops
 	COMMONFLAGS += -mword-relocations
 	COMMONFLAGS += -fno-optimize-sibling-calls
@@ -134,56 +135,95 @@ else ifeq ($(platform), ctr)
 	AR = $(DEVKITARM)/bin/arm-none-eabi-ar$(EXE_EXT)
 	WITH_DYNAREC = oldarm
 	ENDIANNESS_DEFINES :=
+	WITH_FAKE_SDL = 1
 	COMMONFLAGS += -DARM11 -D_3DS -Os -s -I$(CTRULIB)/include/
 	COMMONFLAGS += -DHAVE_MKDIR
 	COMMONFLAGS += -march=armv6k -mtune=mpcore -mfloat-abi=hard
 	COMMONFLAGS += -mword-relocations
 	COMMONFLAGS += -fomit-frame-pointer -fstrict-aliasing -ffast-math
-	COMMONFLAGS += -DDISABLE_EXCEPTIONS
+	COMMONFLAGS += -DDISABLE_EXCEPTIONS -DWITH_FAKE_SDL -fpermissive
 	STATIC_LINKING = 1
 else ifeq ($(platform), wii)
 	TARGET := $(TARGET_NAME)_libretro_$(platform).a
 	CC = $(DEVKITPPC)/bin/powerpc-eabi-gcc$(EXE_EXT)
 	CXX = $(DEVKITPPC)/bin/powerpc-eabi-g++$(EXE_EXT)
 	AR = $(DEVKITPPC)/bin/powerpc-eabi-ar$(EXE_EXT)
-	COMMONFLAGS += -DGEKKO -mrvl -mcpu=750 -meabi -mhard-float -D__POWERPC__ -D__ppc__ -DWORDS_BIGENDIAN=1
+	WITH_FAKE_SDL = 1
+	COMMONFLAGS += -DGEKKO -mrvl -mcpu=750 -meabi -mhard-float -D__POWERPC__ -D__ppc__ -DWORDS_BIGENDIAN=1 -DWITH_FAKE_SDL -fpermissive
 	STATIC_LINKING = 1
 else ifeq ($(platform), wiiu)
 	TARGET := $(TARGET_NAME)_libretro_$(platform).a
 	CC = $(DEVKITPPC)/bin/powerpc-eabi-gcc$(EXE_EXT)
 	CXX = $(DEVKITPPC)/bin/powerpc-eabi-g++$(EXE_EXT)
 	AR = $(DEVKITPPC)/bin/powerpc-eabi-ar$(EXE_EXT)
+	WITH_FAKE_SDL = 1
 	COMMONFLAGS += -DGEKKO -DWIIU -DHW_RVL -mwup -mcpu=750 -meabi -mhard-float -D__POWERPC__ -D__ppc__ -DMSB_FIRST -DWORDS_BIGENDIAN=1 -I./deps/include/
-	COMMONFLAGS += -U__INT32_TYPE__ -U __UINT32_TYPE__ -D__INT32_TYPE__=int
+	COMMONFLAGS += -U__INT32_TYPE__ -U __UINT32_TYPE__ -D__INT32_TYPE__=int -DWITH_FAKE_SDL
 	STATIC_LINKING = 1
 	WITH_DYNAREC =
 else ifeq ($(platform), libnx)
 	include $(DEVKITPRO)/libnx/switch_rules
 	TARGET := $(TARGET_NAME)_libretro_$(platform).a
-	CFLAGS := -g -O2 -fPIE -I$(LIBNX)/include/ -ffunction-sections -fdata-sections -ftls-model=local-exec -Wl,--allow-multiple-definition -specs=$(LIBNX)/switch.specs
+	CFLAGS += -g -O2 -fPIE -I$(LIBNX)/include/ -ffunction-sections -fdata-sections -ftls-model=local-exec -Wl,--allow-multiple-definition -specs=$(LIBNX)/switch.specs
 	CFLAGS += $(INCLUDE) -D__SWITCH__ -DHAVE_LIBNX
-	CXXFLAGS := $(ASFLAGS) $(CFLAGS) -std=gnu++11
-	CFLAGS += -std=gnu11
-	LDFLAGS += `sdl-config --static-libs` -lSDL_net
+	CXXFLAGS += $(ASFLAGS) $(CFLAGS) -std=gnu++11
 	WITH_DYNAREC = arm64
 	STATIC_LINKING = 1
+	WITH_FAKE_SDL = 1
+	COMMONFLAGS += -DWITH_FAKE_SDL
 else ifeq ($(platform), emscripten)
 	TARGET := $(TARGET_NAME)_libretro_$(platform).bc
 	STATIC_LINKING = 1
-	LDFLAGS += -Wl,-Bstatic -lSDL
-	COMMONFLAGS += -DEMSCRIPTEN
+	LDFLAGS += -Wl,-Bstatic
+	WITH_FAKE_SDL = 1
+	COMMONFLAGS += -DEMSCRIPTEN -DWITH_FAKE_SDL
+else ifeq ($(platform), ps3)
+	TARGET := $(TARGET_NAME)_libretro_$(platform).a
+	WITH_FAKE_SDL = 1
+	COMMONFLAGS += -mhard-float -D__POWERPC__ -D__ppc__ -DWORDS_BIGENDIAN=1 -DWITH_FAKE_SDL
+	STATIC_LINKING = 1
+	CC = $(CELL_SDK)/host-win32/ppu/bin/ppu-lv2-gcc.exe
+	CXX = $(CELL_SDK)/host-win32/ppu/bin/ppu-lv2-g++.exe
+	AR = $(CELL_SDK)/host-win32/ppu/bin/ppu-lv2-ar.exe
+else ifeq ($(platform), xbox1_msvc2003)
+	CFLAGS += -D__WIN32__
+	CXXFLAGS += -D__WIN32__
+	TARGET := $(TARGET_NAME)_libretro_xdk1.lib
+	MSVCBINDIRPREFIX = $(XDK)/xbox/bin/vc71
+	CC  = "$(MSVCBINDIRPREFIX)/CL.exe"
+	CXX  = "$(MSVCBINDIRPREFIX)/CL.exe"
+	LD   = "$(MSVCBINDIRPREFIX)/lib.exe"
+	export INCLUDE := $(XDK)/xbox/include
+	export LIB := $(XDK)/xbox/lib
+	PSS_STYLE :=2
+	CFLAGS   += -D_XBOX -D_XBOX1
+	CXXFLAGS += -D_XBOX -D_XBOX1
+	WITH_FAKE_SDL = 1
+	COMMONFLAGS += -DWITH_FAKE_SDL
+	STATIC_LINKING=1
+	HAS_GCC := 0
 else ifeq ($(platform), win)
 	COMMONFLAGS += -mno-ms-bitfields
 	TARGET := $(TARGET_NAME)_libretro.dll
 	LDFLAGS += -shared -static-libgcc -static-libstdc++ -Wl,--version-script=link.T -lwinmm
-	LDFLAGS += -Wl,-Bstatic `sdl-config --static-libs` -lsdl_net
-	LDFLAGS += -Wl,-Bdynamic -liphlpapi -lws2_32
+	ifeq ($(WITH_FAKE_SDL), 1)
+		COMMONFLAGS += -DWITH_FAKE_SDL
+		LDFLAGS += -Wl,-Bstatic
+	else
+		LDFLAGS += -Wl,-Bstatic `sdl-config --static-libs` -lsdl_net
+		LDFLAGS += -Wl,-Bdynamic -liphlpapi -lws2_32
+	endif
 	COMMONFLAGS += -D__USE_W32_SOCKETS -Werror=return-type
 else
 	COMMONFLAGS += -DC_HAVE_MPROTECT="1"
 	TARGET := $(TARGET_NAME)_libretro.so
 	LDFLAGS += -shared -Wl,--version-script=link.T
-	LDFLAGS += `sdl-config --static-libs` -lSDL_net
+	ifeq ($(WITH_FAKE_SDL), 1)
+		COMMONFLAGS += -DWITH_FAKE_SDL
+		LDFLAGS += -Wl,-Bstatic
+	else
+		LDFLAGS += `sdl-config --libs` -lSDL_net
+	endif
 	COMMONFLAGS += -DUNIX_PORTABLE
 	LDFLAGS += -Wl,-Bdynamic
 	fpic = -fPIC
@@ -192,13 +232,15 @@ ifeq ($(DEBUG), 1)
 	COMMONFLAGS += -O0 -g
 else
 	COMMONFLAGS += -O3 -DNDEBUG -DGIT_VERSION=\"$(GIT_VERSION)\" -DSVN_VERSION=\"$(SVN_VERSION)\"
-	ifeq ($(WITH_IPX), 1)
-		COMMONFLAGS += -DC_IPX
+	ifneq ($(WITH_FAKE_SDL), 1)
+		ifeq ($(WITH_IPX), 1)
+			COMMONFLAGS += -DC_IPX
+		endif
 	endif
 endif
 
-CORE_DIR    := ..
-INCFLAGS    :=
+CORE_DIR	:= ..
+INCFLAGS	:=
 SOURCES_C   :=
 SOURCES_CXX :=
 
