core update: - use dynamic_x86 instead of dynrec for x64 builds.   this can result in up to 100% performance improvements over dynrec and completely removes the performance gap compared to x86 builds
  https://www.vogons.org/viewtopic.php?f=32&t=67673

--- a/libretro/Makefile.common
+++ b/libretro/Makefile.common
@@ -155,7 +155,7 @@ else ifeq ($(WITH_DYNAREC), arm64)
 else ifeq ($(WITH_DYNAREC), oldarm)
 	COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="ARMV4LE"
 else ifeq ($(WITH_DYNAREC), x86_64)
-	COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="X86_64"
+	COMMONFLAGS += -DC_DYNAMIC_X86="1" -DC_TARGETCPU="X86_64"
 else ifeq ($(WITH_DYNAREC), x86)
 	COMMONFLAGS += -DC_DYNAMIC_X86="1" -DC_TARGETCPU="X86"
 else ifeq ($(WITH_DYNAREC), x86_new)
