--- a/libretro/Makefile.common
+++ b/libretro/Makefile.common
@@ -145,7 +145,9 @@ SOURCES_C := \
 	$(LIBRETRO_COMM_DIR)/file/file_path.c \
 	$(LIBRETRO_COMM_DIR)/encodings/encoding_utf.c \
 	$(LIBRETRO_COMM_DIR)/compat/compat_strcasestr.c \
-	$(LIBRETRO_COMM_DIR)/compat/compat_strl.c
+	$(LIBRETRO_COMM_DIR)/compat/compat_strl.c \
+	$(LIBRETRO_COMM_DIR)/compat/fopen_utf8.c \
+	$(LIBRETRO_COMM_DIR)/vfs/vfs_implementation.c
 
 # dynarec flags
 ifeq ($(WITH_DYNAREC), arm)
