Use latest libco from Higan instead of libretro-common
Current libco from common results in stack corruption when building for 64-bit
Windows using mingw-w64. msvc is probably affected as well, maybe other
platforms too.

For now, bundle our own copy of libco.

--- a/libretro/Makefile.common
+++ b/libretro/Makefile.common
@@ -13,6 +13,7 @@ endif
 INCFLAGS += \
 	-I$(CORE_DIR)/src \
 	-I$(CORE_DIR)/libretro \
+	-I$(CORE_DIR)/libretro/deps/libco \
 	-I$(LIBRETRO_COMM_DIR)/include \
 	-I$(CORE_DIR)/include \
 	-I$(CORE_DIR)/src/midi/munt
@@ -141,7 +142,7 @@ endif
 endif
 
 SOURCES_C := \
-	$(LIBRETRO_COMM_DIR)/libco/libco.c \
+	$(CORE_DIR)/libretro/deps/libco/libco.c \
 	$(LIBRETRO_COMM_DIR)/encodings/encoding_utf.c \
 	$(LIBRETRO_COMM_DIR)/compat/compat_strcasestr.c \
 	$(LIBRETRO_COMM_DIR)/compat/compat_strl.c \
